<resources>
    <string name="app_name">AndroidTest</string>
    <string name="email_hint">Email</string>
    <string name="login_text">Login</string>
    <string name="signin_text">SIGN IN</string>
    <string name="pwd_hint">Password</string>
    <string name="androidtest_author">AndroidTest by wilfredmoscote@gmail.com</string>
    <string name="empty_fields_error">Please fill all the fields.</string>
    <string name="logout_text">Logout</string>
    <string name="welcome_text">Welcome %s</string>
</resources>